@@ -11,3 +11,4 @@ titania_0.1.1_amd64.deb gnome extra
 titania_0.1.1_amd64.deb gnome extra
 titania_0.2.0_amd64.deb gnome extra
 titania_0.2.0_amd64.deb gnome extra
+titania_0.3.3_amd64.deb gnome extra
