@@ -1,5 +1,9 @@
 2013-07-27  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* strfsize.cpp: 
+
+2013-07-27  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* String.h: 
 
 2013-07-27  Holger Seelig  <holger.seelig@yahoo.de>
